OpenShift/skill_based/1_welcome/Kubernetes/namespace-rh1-welcome.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: rh1-welcome
spec: {}
status: {}
